making syntax readable; fixing syntax error, mispelled in CSS results-list

--- a/Puso_DJS11/components/SearchResultsList.css
+++ b/Puso_DJS11/components/SearchResultsList.css
@@ -1,4 +1,4 @@
-.reaults-list {
+.results-list {
     width: 100%;
     background-color: white;
     display: flex;
